fixed about img spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -131,10 +131,8 @@ html {
 
 /* about styles */
 
-.about-img-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.about-img {
+  margin-bottom: 25px;
 }
 
 #about p {
